--- a/websites/eightytwenty/public/styles.css
+++ b/websites/eightytwenty/public/styles.css
@@ -119,3 +119,10 @@ a:hover {color: #ccc !important;}
 main h1 {color: #666;}
 
 main img {display: block;}
+
+.wrapper {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
