--- a/websites/eightytwenty/public/styles.css
+++ b/websites/eightytwenty/public/styles.css
@@ -1,4 +1,4 @@
-/* import fonts */
+/* import fonts
 @import url('https://stockfont.org/?3e1218d9a01517d5734a1be9e67be4af797abff1230ab272235ec8ed759251d6');
 * {margin: 0; padding: 0;}
 
@@ -17,9 +17,13 @@ header button {float: right; margin-top: 15px; margin-right: 15px;}
 header aside {float: right; margin-top: 15px;}
 header section {width: 1000px; display: block; margin:auto;}
 header h1 {float: left; margin-left: 20px;}
-nav {width: 100%; background-color: #74a60a; overflow: auto;}
-body > img {width: 100%; display: block;}
-nav ul {width: 1000px; margin: auto; display: block; list-style-type: none;}
+
+
+/*sabina*/
+/*nav {width: 100%; background-color: #74a60a; overflow: auto;}*/
+/*body > img {width: 100%; display: block;} -- what is this for?*/
+
+/*nav ul {width: 1000px; margin: auto; display: block; list-style-type: none;}
 nav ul li {width: 25%; float: left; overflow: auto; text-align: center;}
 nav li {color: white; padding-top: 10px; display: block;}
 nav a {color: white; text-decoration: none}
@@ -46,10 +50,60 @@ main a {
 }
 
 nav {font-family: 'Oxygen-Regular';}
-header section {  display: block; font-family: 'Oxygen-Regular', cursive;}
+header section {  display: block; font-family: 'Oxygen-Regular', cursive;}*/
 
+/*elizabeth*/
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    z-index: 1;
+    transition: 0.5s;
+}
+
+ul li {
+    list-style-type: none;
+}
+
+ul li a {
+    color: white;
+    text-decoration: none;
+    font-family: "Barlow', sans-serif";
+    display: block;
+    padding: 40px 25px;
+    font-size: 18px;
+    line-height: 1;
+    transition: 0.3s;
+}
+
+
+ul>li>a:hover,
+ul>li>a.active {
+    color: #a2bf63;
+    background-color: white;
+    border-right: 2px solid grey;
+}
+
+ul>li>a:hover {
+    padding: 35px 25px 45px 25px;
+}
+
+ul>li>a:hover::before,
+ul>li>a.active::before {
+    display: block;
+}
+
+
+/*sabina*/
 header h1 {font-weight: normal;}
-
+/*
 h1 { font-size:4em; color: white; text-align: center; padding-top: 20px; text-shadow: 2px 2px 2px #000;}
 
 main {min-height: 50vh; background-color: #fff; width: 70vw; display: block; margin: auto; box-shadow: 0px 0px 10px #888; color:#444;}
@@ -111,7 +165,7 @@ table td input[type="submit"] {margin: 0; float: right; width: auto; padding: au
 .categories li {margin: 0; padding: 0.5em; font-size: 2em;}
 
 .products > img {max-height: 300px;}
-
+*/
 a:hover {color: #ccc !important;}
 
 .right {padding: 20px;}
@@ -120,4 +174,106 @@ main h1 {color: #666;}
 
 main img {display: block;}
 
+/*elizabeth*/
+/*hamburger icon*/
+.hamburger {
+    position: relative;
+    width: 30px;
+    height: 4px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    cursor: pointer;
+    z-index: 2;
+    transition: 0.3s;
+    margin-right: 20px;
+    /*margin for space around element*/ 
+}
 
+.hamburger::before,
+.hamburger::after {
+    content: "";
+    position: absolute;
+    height: 4px;
+    right: 0;
+    background-color: white;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+
+.hamburger::before {
+    top: -10px;
+    width: 20px;
+}
+
+.hamburger::after {
+    top: 10px;
+    width: 25px;
+}
+
+.toggle-menu{
+    position: absolute;
+    width: 30px;
+    height: 100%;
+    z-index: 3;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.hamburger, .toggle-menu{
+    display: none; 
+
+}
+
+nav input:checked ~ .hamburger{
+    background: transparent;
+
+}
+
+nav input:checked ~ .hamburger::before{
+    top: 0;
+    transform: rotate(-45deg);
+    width: 30px;
+}
+
+nav input:checked ~ .hamburger::after{
+    top: 0;
+    transform: rotate(45deg);
+    width: 30px;
+}
+nav > input:checked ~ .menu {
+    right: 0;
+    box-shadow: -20px 0 40px rgba(70, 66, 66, 0.2);
+}
+@media screen and (max-width:992px) {
+    .hamburger, .toggle-menu{
+        display: block;
+    }
+    header{
+        padding: 10px 20px;
+    }
+    .menu {
+        justify-content: start;
+        flex-direction: column;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        background-color: grey;
+        width: 300px;
+        height: 100%;
+        padding-top: 65px;
+
+    }
+
+    .menu > li {
+        width: 100%;
+    }
+
+    .menu li a 
+    .menu li a:hover{
+        padding:30px;
+        font-size: 24px;
+        box-shadow: 0 1px 0 black inset;
+
+    }
+} 
