--- a/websites/as1/public/ibuy.css
+++ b/websites/as1/public/ibuy.css
@@ -38,7 +38,6 @@ header form input[type=text] {
 	border: 3px solid black;
 	font-size: 2em;
 	padding: 0.5em;
-
 	width: 70%;
 }
 
@@ -114,7 +113,7 @@ main {padding: 3vw; display: block; overflow: hidden; width: 80vw; margin: auto;
 
 article.product {
 	display: grid;
-	griid-template-columns: 60% 40%;
+	grid-template-columns: 60% 40%;
 	grid-template-areas: "img details"
 	"description description"
 	"reviews reviews"
