--- a/websites/eightytwenty/public/styles.css
+++ b/websites/eightytwenty/public/styles.css
@@ -1,7 +1,7 @@
 /* import fonts */
 @import url('https://stockfont.org/?3e1218d9a01517d5734a1be9e67be4af797abff1230ab272235ec8ed759251d6');
-* {margin: 0; padding: 0;}
-
+/* {margin: 0; padding: 0;}
+/*
 html {font-family: 'Oxygen-Regular', verdana, sans-serif; }
 
 body {background-color: #a2bf63;}
@@ -53,7 +53,7 @@ header h1 {font-weight: normal;}
 h1 { font-size:4em; color: white; text-align: center; padding-top: 20px; text-shadow: 2px 2px 2px #000;}
 
 main {min-height: 50vh; background-color: #fff; width: 70vw; display: block; margin: auto; box-shadow: 0px 0px 10px #888; color:#444;}
-footer {min-height: 5vh; color: white;}
+
 
 main h2 {font-size:2em;}
 .home {padding: 5vw; width: 60vw;}
@@ -66,7 +66,7 @@ code {background-color: #ccc;}
 pre code {display: block;}
 
 footer {background-color: #74a60a; padding: 10px; color: white;}
-
+footer {min-height: 5vh; color: white;}
 form select, form label, form input, form textarea {float: left; width: 200px; padding: 10px; margin-top: 20px;}
 form label {clear: left;}
 textarea {height: 100px;}
@@ -119,3 +119,249 @@ a:hover {color: #ccc !important;}
 main h1 {color: #666;}
 
 main img {display: block;}
+
+*/
+
+* {
+    font-family: "Barlow', sans-serif";
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+	background-color: white;
+	height: 13em;
+   
+}
+
+
+nav {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+	height: auto;
+    transition: 0.3s;
+	height: 10em;
+   
+}
+
+
+.logo a img {
+   
+	float: left;
+    width: 26em;
+    text-align: left;
+  
+}
+
+.email {
+    width: 200px;
+    top: 50%;
+    padding: 5px;
+    font-size: 15px;
+    margin: 10px;
+    box-shadow: 0 0 15px 4px;
+}
+
+.password {
+    width: 200px;
+    top: 50%;
+    padding: 5px;
+    font-size: 15px;
+    box-shadow: 0 0 15px 4px;
+}
+
+
+.loginform{
+    float: right;
+    display: flex;
+	flex-wrap: wrap;
+}
+
+
+
+header .searchbar{
+    flex-wrap: wrap;
+	float: right;
+    display: block;
+}
+
+header form input[type=text] {
+	border: 3px solid black;
+	font-size: 2em;
+	padding: 0.5em;
+	width: 70%;
+    box-shadow: 20px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+	background-color: #74a60a;
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    z-index: 1;
+    transition: 0.5s;
+}
+
+ul li {
+    list-style-type: none;
+    
+}
+
+ul li a {
+    color: white;
+    text-decoration: none;
+    font-family: "Barlow', sans-serif";
+    display: block;
+    padding: 40px 25px;
+    font-size: 18px;
+    line-height: 1;
+    transition: 0.3s;
+   
+}
+
+ul>li>a:hover,
+ul>li>a.active {
+    color: grey;
+    background-color: white;
+    border-right: 2px solid color#74a60a;;
+}
+
+ul>li>a:hover {
+    padding: 35px 25px 45px 25px;
+}
+
+ul>li>a:hover::before,
+ul>li>a.active::before {
+    display: block;
+}
+
+/*hamburger icon*/
+.hamburger {
+    position: relative;
+    width: 30px;
+    height: 4px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    cursor: pointer;
+    z-index: 2;
+    transition: 0.3s;
+    margin-right: 20px;
+    /*margin for space around element*/ 
+}
+
+.hamburger::before,
+.hamburger::after {
+    content: "";
+    position: absolute;
+    height: 4px;
+    right: 0;
+    background-color: white;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+
+.hamburger::before {
+    top: -10px;
+    width: 20px;
+}
+
+.hamburger::after {
+    top: 10px;
+    width: 25px;
+}
+
+.toggle-menu{
+    position: absolute;
+    width: 30px;
+    height: 100%;
+    z-index: 3;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.hamburger, .toggle-menu{
+    display: none; 
+
+}
+
+nav input:checked ~ .hamburger{
+    background: transparent;
+
+}
+
+nav input:checked ~ .hamburger::before{
+    top: 0;
+    transform: rotate(-45deg);
+    width: 30px;
+}
+
+nav input:checked ~ .hamburger::after{
+    top: 0;
+    transform: rotate(45deg);
+    width: 30px;
+}
+
+nav > input:checked ~ .menu {
+    right: 0;
+    box-shadow: -20px 0 40px rgba(70, 66, 66, 0.2);
+}
+
+@media screen and (max-width:992px) {
+    .hamburger, .toggle-menu{
+        display: block;
+    }
+	header{
+        padding: 10px 20px;
+    }
+    .menu {
+        justify-content: start;
+        flex-direction: column;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        background-color:  #74a60a;;
+        width: 300px;
+        height: 100%;
+        padding-top: 65px;
+
+    }
+	.menu > li {
+        width: 100%;
+    }
+
+    .menu li a 
+    .menu li a:hover{
+        padding:30px;
+        font-size: 24px;
+        box-shadow: 0 1px 0 black inset;
+
+    }
+}
+
+
+
+
+body {
+    background-image: url(images/HelloFreshBackground4.png);
+
+}
+
+main {
+	background-color: white;
+}
+main {min-height: 50vh; background-color: #fff; width: 70vw; display: block; margin: auto; box-shadow: 0px 0px 10px #888; color:#444;}
+footer {background-color: #74a60a; padding: 10px; color: white;}
+footer {min-height: 5vh; color: white;}
